--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 		}
 	},
     "require": {
-        "php": ">=7.0",
-        "picqer/php-barcode-generator": "0.2.*"
+        "php": ">=7.3",
+        "picqer/php-barcode-generator": "^2.2"
     }
 }
